// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`HeroBanner should render properly with all props assigned 1`] = `
=======
exports[`HeroBanner should render with many props assigned 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<div
  className="testing-123 HeroBanner"
  style={
    Object {
<<<<<<< HEAD
      "backgroundImage": "url(https://s3.amazonaws.com/operationcode-assets/heroBanner/stock_family-2.jpg)",
=======
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://s3.amazonaws.com/operationcode-assets/heroBanner/stock_family-2.jpg)",
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
    }
  }
>
  <div
    className="content"
  >
    <h1
      className="underline"
    >
      Test
    </h1>
    Testing 123
  </div>
</div>
`;

<<<<<<< HEAD
exports[`HeroBanner should render with just required props passed 1`] = `
=======
exports[`HeroBanner should render with required props 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<div
  className="HeroBanner"
  style={
    Object {
<<<<<<< HEAD
      "backgroundImage": "url(https://s3.amazonaws.com/operationcode-assets/heroBanner/stock_family-2.jpg)",
=======
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://s3.amazonaws.com/operationcode-assets/heroBanner/stock_family-2.jpg)",
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
    }
  }
>
  <div
    className="content"
  >
    <h1
      className=""
    >
      Test
    </h1>
  </div>
</div>
`;
